--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
@@ -16,6 +18,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
